bugfix google map shrink too small

--- a/P8_NeighborhoodMap/css/style.css
+++ b/P8_NeighborhoodMap/css/style.css
@@ -6,3 +6,7 @@ html, body {
   height: 100%;
   min-height: 100%;
 }
+
+.fill {
+  height: 100%;
+}
